--- a/index.html
+++ b/index.html
@@ -8,21 +8,44 @@
   </head>
   <body>
     <div id="main">
-      <div id="nav-bar">
+      <!-- nav-1 -->
+      <div id="nav-bar-1">
         <div id="logo">
-            <div class="circle"></div>
-            <div class="circle"></div>
+          <div class="circle"></div>
+          <div class="circle"></div>
         </div>
         <div id="nav-elem">
-            <h4>EN <span>RU</span></h4>
-            <h4>Country:Russia</h4>
-            <h4>Profile</h4>
-            <h4>Wishlist[0]</h4>
-            <h4>Search</h4>
-
+          <h4>EN <span>RU</span></h4>
+          <h4>Country:Russia</h4>
+          <h4>Profile</h4>
+          <h4>Wishlist[0]</h4>
+          <h4>Search</h4>
         </div>
-       
       </div>
+
+      <!-- nav -2 -->
+      <div id="nav-bar-2">
+        <h4>Sun</h4>
+        <h4>Optical</h4>
+        <h4>Collections</h4>
+        <h4>Studio</h4>
+        <h4>About</h4>
+        <h4>Shops</h4>
+        <h4>Journal</h4>
+      </div>
+
+      <!-- content -->
+       <div id="content">
+        <div id="info-content">
+            <div class="elem">
+                <h1>Trendline</h1>
+            </div>
+            <div class="elem"></div>
+            <div class="elem"></div>
+        </div>
+        <div id="img-content"></div>
+       </div>
+
     </div>
   </body>
 </html>
