working on content section

--- a/index.html
+++ b/index.html
@@ -32,20 +32,23 @@
         <h4>About</h4>
         <h4>Shops</h4>
         <h4>Journal</h4>
-      </div>
+      </div>  
 
       <!-- content -->
-       <div id="content">
+      <div id="content">
         <div id="info-content">
-            <div class="elem">
-                <h1>Trendline</h1>
-            </div>
-            <div class="elem"></div>
-            <div class="elem"></div>
+          <div class="elem">
+            <h1>Vogue</h1>
+          </div>
+          <div class="elem">
+            <h1>Trendline</h1>
+          </div>
+          <div class="elem">
+            <h1>Couture</h1>
+          </div>
         </div>
         <div id="img-content"></div>
-       </div>
-
+      </div>
     </div>
   </body>
 </html>
