added new font file

--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
         <h4>About</h4>
         <h4>Shops</h4>
         <h4>Journal</h4>
-      </div>  
+      </div>
 
       <!-- content -->
       <div id="content">
         <div id="info-content">
           <div class="elem">
-            <h1>Vogue</h1>
+            <h1>Artisanal</h1>
           </div>
           <div class="elem">
             <h1>Trendline</h1>
@@ -46,7 +46,17 @@
           <div class="elem">
             <h1>Couture</h1>
           </div>
+          <div class="elem">
+            <h1>Tailored</h1>
+          </div>
+          <div class="elem">
+            <h1>Seasonal</h1>
+          </div>
+          <div class="elem">
+            <h1>Timeless</h1>
+          </div>
         </div>
+        
         <div id="img-content"></div>
       </div>
     </div>
