--- a/index.html
+++ b/index.html
@@ -56,8 +56,29 @@
             <h1>Timeless</h1>
           </div>
         </div>
-        
-        <div id="img-content"></div>
+        <div id="img-content">
+          <img
+            src="https://images.unsplash.com/photo-1477814670986-8d8dccc5640d?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1yZWxhdGVkfDEwfHx8ZW58MHx8fHx8"
+            alt=""
+            srcset=""
+            id="img-1"
+          />
+
+          <img
+            src="https://images.unsplash.com/photo-1589081318939-f9952734290f?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTEyfHxtb2RlbCUyMHdpdGglMjBnbGFzc2VzfGVufDB8MHwwfHx8MA%3D%3D"
+            alt=""
+            srcset=""
+            id="img-2"
+          />
+          <img
+            src="https://plus.unsplash.com/premium_photo-1707674004083-ca21b6aaca38?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1yZWxhdGVkfDE2fHx8ZW58MHx8fHx8"
+            alt="a model image"
+            srcset=""
+            id="img-3"
+          />
+
+          />
+        </div>
       </div>
     </div>
   </body>
